--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,8 @@ services:
     - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
     - 8080:80
+  php:
+    image: php:fpm
+    working_dir: /app
+    volumes:
+    - ./src:/app
