--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,17 +5,36 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    root   /app;
+    index  index.php;
+        
+
     location / {
-        root   /app;
-        index  index.html index.htm;
+        try_files $uri /index.php$is_args$args;
+    }
+
+
+    if (!-e $request_filename) {
+        rewrite ^.*$ /40x.html last;
     }
 
     #error_page  404              /404.html;
+    error_page   404 /40x.html;
+    location = /40x.html {
+        root   /app;
+    }
 
     # redirect server error pages to the static page /50x.html
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /app;
+    }
+    
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
     }
 }
